--- a/package.json
+++ b/package.json
@@ -84,7 +84,6 @@
     "merge-stream": "^1.0.0",
     "minimist": "^1.1.1",
     "mocha": "^2.2.4",
-    "node-sass": "3.7.0",
     "node-uuid": "^1.4.3",
     "photoswipe": "^4.1.0",
     "pre-commit": "^1.0.5",
@@ -132,6 +131,7 @@
     "messageformat": "^1.0.2",
     "moment": "^2.15.1",
     "ng-infinite-scroll": "^1.3.0",
+    "node-sass": "^4.5.3",
     "pikaday": "^1.4.0",
     "prismjs": "^1.6.0",
     "raven-js": "^3.7.0",
